config/pods.yaml
# ------------------------------------ WRITER
apiVersion: v1
kind: Pod
metadata:
  name: writer1
  labels:
    app: writer1
spec:
  volumes:
    - name: file-storage
      persistentVolumeClaim:
        claimName: pvc1
  containers:
    - name: writer
      image: vmerv/storage:fat-writer
      imagePullPolicy: Always
      ports:
        - name: main
          containerPort: 8080
      volumeMounts:
        - mountPath: /files
          name: file-storage
          
    - name: db
      image: vmerv/storage:metadatadb-v1.0
      ports:
        - name: main
          containerPort: 5432
---
apiVersion: v1
kind: Pod
metadata:
  name: writer2
  labels:
    app: writer2
spec:
  volumes:
    - name: file-storage
      persistentVolumeClaim:
        claimName: pvc2
  containers:
    - name: writer
      image: vmerv/storage:fat-writer
      imagePullPolicy: Always
      ports:
        - name: main
          containerPort: 8080
      volumeMounts:
        - mountPath: /files
          name: file-storage
          
    - name: db
      image: vmerv/storage:metadatadb-v1.0
      ports:
        - name: main
          containerPort: 5432
---
apiVersion: v1
kind: Pod
metadata:
  name: writer3
  labels:
    app: writer3
spec:
  volumes:
    - name: file-storage
      persistentVolumeClaim:
        claimName: pvc3
  containers:
    - name: writer
      image: vmerv/storage:fat-writer
      imagePullPolicy: Always
      ports:
        - name: main
          containerPort: 8080
      volumeMounts:
        - mountPath: /files
          name: file-storage
          
    - name: db
      image: vmerv/storage:metadatadb-v1.0
      ports:
        - name: main
          containerPort: 5432

# ------------------------------------ CURL
---
apiVersion: v1
kind: Pod
metadata:
  name: curl-pod
spec:
  containers:
    - name: main
      image: curlimages/curl
      command: [ "sleep", "600" ]

# ------------------------------------ PROXY
---
apiVersion: v1
kind: Pod
metadata:
  name: proxy
  labels:
    app: proxy

spec:
  containers:
    - name: main
      image: vmerv/storage:fat-proxy
      imagePullPolicy: Always
      ports:
        - name: main
          containerPort: 8080
    - name: db
      image: vmerv/storage:metadatadb-v1.0
      ports:
        - name: main
          containerPort: 5432
# ------------------------------------ HEALTH CHECK
---
apiVersion: v1
kind: Pod
metadata:
  name: check
  labels:
    app: health-check
spec:
  containers:
    - name: main
      image: vmerv/storage:fat-check
      imagePullPolicy: Always
      ports:
        - name: main
          containerPort: 8080
