config/tmp.yaml
# ------------------------------------ HEALTH CHECK
---
apiVersion: v1
kind: Pod
metadata:
  name: check
  labels:
    app: health-check
spec:
  containers:
    - name: main
      image: vmerv/storage:fat-check
      imagePullPolicy: Always
      ports:
        - name: main
          containerPort: 8080
