config/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: writer-service1
spec:
  selector:
    app: writer1
  ports:
    - name: main
      targetPort: 8080
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: writer-service2
spec:
  selector:
    app: writer2
  ports:
    - name: main
      targetPort: 8080
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: writer-service3
spec:
  selector:
    app: writer3
  ports:
    - name: main
      targetPort: 8080
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: check-service
spec:
  selector:
    app: health-check
  ports:
    - name: main
      targetPort: 8080
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  selector:
    app: proxy
  ports:
    - name: main
      targetPort: 8080
      port: 8080
