config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: ingress
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            
            pathType: Prefix
            backend:
              service:
                name: proxy
                port:
                  number: 8080
